--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -6,5 +6,5 @@ _wdt:
     prefix:   /_wdt
 
 _profiler:
-    resource: @WebProfilerBundle/Resources/config/routing/profiler.xml
+    resource: "@WebProfilerBundle/Resources/config/routing/profiler.xml"
     prefix:   /_profiler
