--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/Tangent"]
 	path = src/Tangent
-	url = git@github.com:tangentlabs/xwc-core.git
+	url = git@github.com:tangentlabs/XwcCoreBundle.git
